ran grunt --force to force a build in /dist

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-route": "1.2.16",
     "angular-ui-sortable": "~0.13.1",
     "jquery-ui": "~1.11.2",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "Angular-localStorage": "latest"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
